# Deep-Into-AI-Quant

./: .clangd  CMakeLists.txt  README 1.md  README.md  d2l_cpp_part1_layers_and_modules.md  main.sublime-workspace
.obsidian/: workspace.json
Attention & Transformers - Multi-Asset Prediction/: README.md
CNNs - Candlestick Pattern Recognition/: CandleCNN.h  DataGenerator.py  GafEncoder.py  Notes.md  README.md  dataVisualisation.py  implementation.py  main.cpp  train.cpp
Capstone Project/: README.md
Linear Networks - S&P500 Direction Prediction/: Linear Classifier.py  Notes.md  README.md  simple features.py
Multilayer Perceptrons - Volatility Forecasting/: Implementation.py  MiniProject.py  Notes.md  README.md
Optimization & Performance/: README.md
RNNs & LSTM - Time Series Forecasting/: README.md
Reinforcement Learning - DQN Trading Agent/: README.md
